--- a/BlogEngine/BlogEngine.Client/_Imports.razor
+++ b/BlogEngine/BlogEngine.Client/_Imports.razor
@@ -20,3 +20,4 @@
 @using BlogEngine.ClientServices.Services.Abstractions
 @using BlogEngine.Shared
 @using Syncfusion.Blazor.Popups
+@using BlogEngine.Client.Shared.Widgets
