--- a/BlogEngine/BlogEngine.Client/Pages/_Host.cshtml
+++ b/BlogEngine/BlogEngine.Client/Pages/_Host.cshtml
@@ -16,42 +16,35 @@
     <!-- favicon -->
     <link rel="icon" type="image/png" href="favicon.png" />
 
-    <!-- bootstrap CDN -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-          integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-
-    <!-- fontawesome -->
-    <link rel="stylesheet" href="css/fontawesome/css/all.min.css">
-
-    <!-- poppins font -->
+    <!-- Poppins Font -->
     <link rel="stylesheet" href="css/fonts/poppins/stylesheet.css">
 
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css"
+          integrity="sha384-r4NyP46KrjDleawBgD5tp8Y7UzmLA05oM1iAEQ17CSuDqnUK2+k9luXQOfXJCJ4I" crossorigin="anonymous">
+
     <!-- syncfusion css -->
-    <link href="_content/Syncfusion.Blazor/styles/fabric.css" rel="stylesheet" />
-    @*<link href="_content/Syncfusion.Blazor/styles/material.css" rel="stylesheet" />*@
+    <link href="_content/Syncfusion.Blazor/styles/bootstrap4.css" rel="stylesheet" />
 
-    <!-- syncfusion js CDN -->
-    @*<script src="https://cdn.syncfusion.com/blazor/18.2.44/syncfusion-blazor.min.js"></script>*@
-
-    <!-- custom css -->
+    <!-- Custom css -->
     <link href="css/main.css" rel="stylesheet" />
+
 </head>
 <body>
     <app>
         <component type="typeof(App)" render-mode="ServerPrerendered" />
     </app>
 
+
+    <!-- Blazor JS -->
     <script src="_framework/blazor.server.js"></script>
 
-    <!-- bootstrap CDN -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-            integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-            crossorigin="anonymous"></script>
+    <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
             integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
             crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
-            integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.min.js"
+            integrity="sha384-oesi62hOLfzrys4LxRF63OJCXdXDipiYWBnvTl9Y9/TRlw5xlKIEHpNyvvDShgf/"
             crossorigin="anonymous"></script>
 </body>
 </html>
