Various updates in Client, start migrating to BS V5

--- a/BlogEngine/BlogEngine.Client/Pages/Blog/EditBlog.razor
+++ b/BlogEngine/BlogEngine.Client/Pages/Blog/EditBlog.razor
@@ -1,5 +1,6 @@
 ﻿@page "/blog/edit/{ID:int}"
 @page "/blog/edit/{ID:int}/{Title}"
+@layout EmptyLayout
 @inject IBlogClient BlogClient
 @inject NavigationManager NavigationManager
 
