--- a/BlogEngine/BlogEngine.Client/Shared/Blog/CreateBlogForm.razor
+++ b/BlogEngine/BlogEngine.Client/Shared/Blog/CreateBlogForm.razor
@@ -27,7 +27,7 @@
         </div>
 
         <br />
-        <SfButton CssClass="e-success" Disabled="_submitButtDisabled">Submit</SfButton>
+        <button class="btn btn-success" disabled="@_submitButtDisabled">Submit</button>
         <br />
     </EditForm>
 </div>
