--- a/BlogEngine/BlogEngine.Client/Shared/Navigation.razor
+++ b/BlogEngine/BlogEngine.Client/Shared/Navigation.razor
@@ -1,5 +1,5 @@
 ﻿<!-- Navigation -->
-<nav class="navbar navbar-expand-sm navbar-light bg-light shadow-sm sticky-top">
+<nav class="navbar navbar-expand-lg navbar-light bg-light shadow-sm sticky-top">
     <div class="container">
         <a class="navbar-brand" href="/">BLOG</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar">
