--- a/BlogEngine/BlogEngine.Client/_Imports.razor
+++ b/BlogEngine/BlogEngine.Client/_Imports.razor
@@ -21,3 +21,5 @@
 @using BlogEngine.Shared
 @using Syncfusion.Blazor.Popups
 @using BlogEngine.Client.Shared.Widgets
+@using BlogEngine.Client.Shared.Layouts
+@using BlogEngine.ClientServices.Extensions
