Added create and manage pages for NotificationReceiver

--- a/BlogEngine/BlogEngine.Client/Pages/Blog/CreateBlog.razor
+++ b/BlogEngine/BlogEngine.Client/Pages/Blog/CreateBlog.razor
@@ -1,7 +1,7 @@
 ﻿@page "/blog/create"
-@layout EmptyLayout
-@inject IBlogClient BlogClient
+@layout NavigationLayout
 @inject NavigationManager NavigationManager
+@inject IBlogClient BlogClient
 
 <TextCenter Text="Create Blog" />
 
