--- a/BlogEngine/BlogEngine.Client/Shared/Navigation.razor
+++ b/BlogEngine/BlogEngine.Client/Shared/Navigation.razor
@@ -28,6 +28,14 @@
                         <li><a class="dropdown-item" href="#">Manage</a></li>
                     </ul>
                 </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="subscribe-dropdown" data-toggle="dropdown"
+                       aria-expanded="false">Notifications-Subscribers</a>
+                    <ul class="dropdown-menu" aria-labelledby="subscribe-dropdown">
+                        <li><a class="dropdown-item" href="notificationReceiver/create">Subscribe</a></li>
+                        <li><a class="dropdown-item" href="notificationReceivers/manage">Manage</a></li>
+                    </ul>
+                </li>
             </ul>
             <div>
                 <a class="btn btn-outline-primary" href="#">Log in</a>
