--- a/BlogEngine/BlogEngine.Client/_Imports.razor
+++ b/BlogEngine/BlogEngine.Client/_Imports.razor
@@ -23,3 +23,4 @@
 @using BlogEngine.Client.Shared.Widgets
 @using BlogEngine.Client.Shared.Layouts
 @using BlogEngine.ClientServices.Extensions
+@using BlogEngine.Client.Shared.Notification
