--- a/BlogEngine/BlogEngine.Client/_Imports.razor
+++ b/BlogEngine/BlogEngine.Client/_Imports.razor
@@ -24,3 +24,4 @@
 @using BlogEngine.Client.Shared.Layouts
 @using BlogEngine.ClientServices.Extensions
 @using BlogEngine.Client.Shared.Notification
+@using BlogEngine.Client.Shared.Comment
