--- a/BlogEngine/BlogEngine.Client/Pages/_Host.cshtml
+++ b/BlogEngine/BlogEngine.Client/Pages/_Host.cshtml
@@ -19,6 +19,9 @@
     <!-- Poppins Font -->
     <link rel="stylesheet" href="css/fonts/poppins/stylesheet.css">
 
+    <!-- FontAwesome -->
+    <link href="~/css/fontawesome/css/all.min.css" rel="stylesheet" />
+
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css"
           integrity="sha384-r4NyP46KrjDleawBgD5tp8Y7UzmLA05oM1iAEQ17CSuDqnUK2+k9luXQOfXJCJ4I" crossorigin="anonymous">
