--- a/BlogEngine/BlogEngine.Client/_Imports.razor
+++ b/BlogEngine/BlogEngine.Client/_Imports.razor
@@ -1,27 +1,27 @@
 ﻿@using System.Net.Http
+@using System.IO
+@using Microsoft.JSInterop
 @using Microsoft.AspNetCore.Authorization
 @using Microsoft.AspNetCore.Components.Authorization
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
-@using Microsoft.JSInterop
-@using BlogEngine.Client
-@using BlogEngine.Client.Shared
-@using BlogEngine.Client.Shared.Blog
-@using BlogEngine.Shared.DTOs
 @using Blazor.FileReader
-@using System.IO
 @using Syncfusion.Blazor.Spinner
 @using Syncfusion.Blazor.Inputs
 @using Syncfusion.Blazor.Buttons
 @using Syncfusion.Blazor.RichTextEditor
-@using Syncfusion.Blazor.Grids
+@using Syncfusion.Blazor.Popups
 @using BlogEngine.ClientServices.Services.Implementations
 @using BlogEngine.ClientServices.Services.Abstractions
+@using BlogEngine.ClientServices.Extensions
+@using BlogEngine.Client
+@using BlogEngine.Client.Shared
+@using BlogEngine.Client.Shared.Blog
 @using BlogEngine.Shared
-@using Syncfusion.Blazor.Popups
+@using BlogEngine.Shared.DTOs
 @using BlogEngine.Client.Shared.Widgets
 @using BlogEngine.Client.Shared.Layouts
-@using BlogEngine.ClientServices.Extensions
 @using BlogEngine.Client.Shared.Notification
 @using BlogEngine.Client.Shared.Comment
+@using BlogEngine.Client.Shared.Category
