--- a/BlogEngine/BlogEngine.Client/Shared/Navigation.razor
+++ b/BlogEngine/BlogEngine.Client/Shared/Navigation.razor
@@ -23,9 +23,9 @@
                     <a class="nav-link dropdown-toggle" href="#" id="category-dropdown" data-toggle="dropdown"
                        aria-expanded="false">Category</a>
                     <ul class="dropdown-menu" aria-labelledby="category-dropdown">
-                        <li><a class="dropdown-item" href="#">Create</a></li>
+                        <li><a class="dropdown-item" href="category/create">Create</a></li>
                         <li><a class="dropdown-item" href="#">Filter</a></li>
-                        <li><a class="dropdown-item" href="#">Manage</a></li>
+                        <li><a class="dropdown-item" href="category/manage">Manage</a></li>
                     </ul>
                 </li>
                 <li class="nav-item dropdown">
