--- a/BlogEngine/BlogEngine.Client/Shared/Category/CategoryCreateForm.razor
+++ b/BlogEngine/BlogEngine.Client/Shared/Category/CategoryCreateForm.razor
@@ -1,4 +1,5 @@
-﻿<EditForm Model="_categoryCreationDTO" OnValidSubmit="OnDataAnnotationsValidated"
+﻿<EditForm Model="_categoryCreationDTO"
+          OnValidSubmit="OnDataAnnotationsValidated"
           class="d-flex justify-content-center align-items-center flex-column">
     <DataAnnotationsValidator />
 
