--- a/BlogEngine/BlogEngine.Client/Shared/Category/CategoryList.razor
+++ b/BlogEngine/BlogEngine.Client/Shared/Category/CategoryList.razor
@@ -12,7 +12,8 @@
                 @foreach (var categoryDTO in CategoryDTOs)
                 {
                     <div class="col-xl-3 col-lg-4 col-md-6 my-2">
-                        <IndividualCategoryCard CategoryDTO="categoryDTO"/>
+                        <IndividualCategoryCard CategoryDTO="categoryDTO"
+                                                CategoryDelete="CategoryDelete" />
                     </div>
                 }
             </div>
@@ -23,4 +24,5 @@
 
 @code {
     [Parameter] public List<CategoryDTO> CategoryDTOs { get; set; }
+    [Parameter] public EventCallback<CategoryDTO> CategoryDelete { get; set; }
 }
