--- a/BlogEngine/BlogEngine.Client/wwwroot/css/main.css
+++ b/BlogEngine/BlogEngine.Client/wwwroot/css/main.css
@@ -28,3 +28,10 @@ body {
         object-fit: cover;
         height: 286px;
     }
+
+.fully-centered {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%) !important;
+}
